# FireSoft

./: Gumstix  Makefile  README.md  config.json  connect.sh  createModule.sh  start.sh  start_gs.sh  start_sim.sh  start_uav.sh  stop.sh
autoPilot/: CMakeLists.txt
autoPilot/inc/: CAutoPilot.h
autoPilot/main/: main.cpp
autoPilot/src/: CAutoPilot.cpp
autoPilotSim/: CMakeLists.txt
autoPilotSim/inc/: CAutoPilotSim.h
autoPilotSim/main/: main.cpp  test.cpp
autoPilotSim/src/: CAutoPilotSim.cpp
cmake/: FindBoost.cmake  FindSerial.cmake  Toolchain.cmake
comSalland/: CMakeLists.txt
comSalland/main/: main.cpp
fitnessGenBattery/: CMakeLists.txt
fitnessGenCollision/: CMakeLists.txt
fitnessGenCoverage/: CMakeLists.txt
fitnessGenStatic/: CMakeLists.txt  Makefile
groundStation/: CMakeLists.txt
groundStationSim/: CMakeLists.txt
gsGuiInterface/: CMakeLists.txt  Makefile
gsVisualizer/: CMakeLists.txt
inc/: AutoPilotProt.h  CTime.h  Defs.h  Fire.h  FireMap.h  Fitness.h  FitnessMap.h  Geometry.h  MapFunctions.h  Protocol.h  RadioStructs.h  ShMemTypedefs.h  SimStructs.h  StructToFromCont.h  UAVState.h  UAVStructs.h  Waypoint.h
mapFire/: CMakeLists.txt
mapFitness/: CMakeLists.txt
mapSelf/: CMakeLists.txt
mapUAVs/: CMakeLists.txt
msgPlanner/: CMakeLists.txt
radio/: CMakeLists.txt  Makefile
radioSim/: CMakeLists.txt
sensorCO/: CMakeLists.txt
sensorCam/: CMakeLists.txt
serial/: BufferedAsyncSerial.cpp  BufferedAsyncSerial.h  CMakeLists.txt  Makefile
sim/: CMakeLists.txt
templateModule/: CMakeLists.txt
tests/: CMakeLists.txt
wpPlanner/: CMakeLists.txt
(+138 files in other folders)
